Add "Open in colab" button

--- a/Train_würstchen.ipynb
+++ b/Train_würstchen.ipynb
@@ -1,8 +1,17 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "id": "dDnD7npf7ix_",
+      "metadata": {
+        "id": "dDnD7npf7ix_"
+      },
       "source": [
+        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/korakoe/Wuerstchen/blob/main/Train_w%C3%BCrstchen.ipynb\">\n",
+        "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+        "</a>\n",
+        "\n",
         "<p align=\"center\"><img src=\"https://raw.githubusercontent.com/ShoukanLabs/.github/main/profile/ShoukanLab-circle.png\" width=\"256\"></p>\n",
         "\n",
         "<p align=\"center\", style=\"font-size: 2rem; font-weight: bold; color: #ff593e;\">🧪 ShoukanLabs ー召喚Labsー</p>\n",
@@ -31,21 +40,17 @@
         "- **Previous Projects**\n",
         "  - [OpenNiji](https://huggingface.co/ShoukanLabs/OpenNiji) - A finetune aimed at replicating Nijijourney on Stable Diffusion.\n",
         "  - [OpenNiji-V2](https://huggingface.co/ShoukanLabs/OpenNiji-V2) - A second finetune made to replicate the Nijijourney style more accurately."
-      ],
-      "metadata": {
-        "id": "dDnD7npf7ix_"
-      },
-      "id": "dDnD7npf7ix_"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "c6200fa6-a1b7-42f1-a5dc-8eee985e0123",
       "metadata": {
-        "tags": [],
+        "cellView": "form",
         "id": "c6200fa6-a1b7-42f1-a5dc-8eee985e0123",
         "outputId": "e131e1d7-5524-4a5c-b492-ab9436d5f02d",
-        "cellView": "form"
+        "tags": []
       },
       "outputs": [
         {
@@ -85,9 +90,9 @@
       "execution_count": null,
       "id": "a5427ec5-a7ae-469f-8218-671fc2121adb",
       "metadata": {
-        "tags": [],
+        "cellView": "form",
         "id": "a5427ec5-a7ae-469f-8218-671fc2121adb",
-        "cellView": "form"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -103,9 +108,9 @@
       "execution_count": null,
       "id": "545629b6-ac65-450e-8fcd-92b0f436c04a",
       "metadata": {
-        "tags": [],
+        "cellView": "form",
         "id": "545629b6-ac65-450e-8fcd-92b0f436c04a",
-        "cellView": "form"
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -173,10 +178,11 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "1_6Fy6C64Jrf",
       "metadata": {
-        "tags": [],
         "cellView": "form",
-        "id": "1_6Fy6C64Jrf"
+        "id": "1_6Fy6C64Jrf",
+        "tags": []
       },
       "outputs": [],
       "source": [
@@ -241,11 +247,17 @@
         "  --run_name $run_name \\\n",
         "  --output_path $output_path \\\n",
         "  --save_checkpoint_path $save_path \\\n"
-      ],
-      "id": "1_6Fy6C64Jrf"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "id": "6zx45r-25dTF",
+      "metadata": {
+        "cellView": "form",
+        "id": "6zx45r-25dTF"
+      },
+      "outputs": [],
       "source": [
         "# @title Test Finetuned Model\n",
         "stage_c_path = \"\" # @param {type:\"string\"}\n",
@@ -365,17 +377,15 @@
         "print(f\"Images Shape: {sampled.shape}\")\n",
         "print(caption)\n",
         "showimages(sampled)"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "6zx45r-25dTF"
-      },
-      "id": "6zx45r-25dTF",
-      "execution_count": null,
-      "outputs": []
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
@@ -391,12 +401,7 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.8.10"
-    },
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 5
