--- a/Train_würstchen.ipynb
+++ b/Train_würstchen.ipynb
@@ -74,6 +74,7 @@
         "\n",
         "!git clone https://github.com/korakoe/Wuerstchen.git\n",
         "!pip install -r Wuerstchen/requirements.txt\n",
+        "!pip install pip install git+https://github.com/pabloppp/pytorch-tools@master\n",
         "!pip install wandb\n",
         "\n",
         "import wandb\n",
