--- a/Train_würstchen.ipynb
+++ b/Train_würstchen.ipynb
@@ -99,9 +99,9 @@
       "source": [
         "#@title Download Required Models For Training\n",
         "\n",
-        "!wegt https://huggingface.co/dome272/wuerstchen/resolve/main/vqgan_f4_v1_500k.pt -O \"vq.pt\"\n",
-        "!wegt https://huggingface.co/dome272/wuerstchen/resolve/main/model_v2_stage_b.pt -O \"stage_b.bin\"\n",
-        "!wegt https://huggingface.co/dome272/wuerstchen/resolve/main/model_v2_stage_c_finetune_interpolation.pt -O \"stage_c.bin\""
+        "!wget https://huggingface.co/dome272/wuerstchen/resolve/main/vqgan_f4_v1_500k.pt -O \"vq.pt\"\n",
+        "!wget https://huggingface.co/dome272/wuerstchen/resolve/main/model_v2_stage_b.pt -O \"stage_b.bin\"\n",
+        "!wget https://huggingface.co/dome272/wuerstchen/resolve/main/model_v2_stage_c_finetune_interpolation.pt -O \"stage_c.bin\""
       ]
     },
     {
