clearly not very smart

--- a/Train_würstchen.ipynb
+++ b/Train_würstchen.ipynb
@@ -136,7 +136,7 @@
         "load_path = \"./stage_b.bin\" # @param {type:\"string\"}\n",
         "save_path = \"\" # @param {type:\"string\"}\n",
         "\n",
-        "if load_from_pretrained\n",
+        "if load_from_pretrained:\n",
         "  !python Wuerstchen/train_stage_B.py \\\n",
         "  --updates $steps \\\n",
         "  --warmup_updates $warmup_steps \\\n",
@@ -210,7 +210,7 @@
         "load_path = \"./stage_c.bin\" # @param {type:\"string\"}\n",
         "save_path = \"\" # @param {type:\"string\"}\n",
         "\n",
-        "if load_from_pretrained\n",
+        "if load_from_pretrained:\n",
         "  !python Wuerstchen/train_stage_B.py \\\n",
         "  --updates $steps \\\n",
         "  --warmup_updates $warmup_steps \\\n",
