im in the testing phase so you'll see a few commits

--- a/Train_würstchen.ipynb
+++ b/Train_würstchen.ipynb
@@ -75,7 +75,7 @@
         "!git clone https://github.com/korakoe/Wuerstchen.git\n",
         "!pip install -r Wuerstchen/requirements.txt\n",
         "!pip install pip install git+https://github.com/pabloppp/pytorch-tools@master\n",
-        "!pip install wandb\n",
+        "!pip install wandb transformers\n",
         "\n",
         "import wandb\n",
         "print(\"Logging into W&B...\")\n",
