i think its fixed

--- a/Train_würstchen.ipynb
+++ b/Train_würstchen.ipynb
@@ -75,7 +75,7 @@
         "!git clone https://github.com/korakoe/Wuerstchen.git\n",
         "!pip install -r Wuerstchen/requirements.txt\n",
         "!pip install pip install git+https://github.com/pabloppp/pytorch-tools@master\n",
-        "!pip install wandb transformers\n",
+        "!pip install wandb transformers webdataset datasets warmup_scheduler\n",
         "\n",
         "import wandb\n",
         "print(\"Logging into W&B...\")\n",
@@ -154,8 +154,8 @@
         "  --run_name $run_name \\\n",
         "  --output_path $output_path \\\n",
         "  --load \\\n",
-        "  -- load_checkpoint_path $load_path \\\n",
-        "  --save_checkpoint_path $save_path \\\n",
+        "  --load_checkpoint_path $load_path \\\n",
+        "  --save_checkpoint_path $save_path \n",
         "else:\n",
         "  !python Wuerstchen/train_stage_B.py \\\n",
         "  --updates $steps \\\n",
@@ -173,7 +173,7 @@
         "  --image_column $image_column \\\n",
         "  --run_name $run_name \\\n",
         "  --output_path $output_path \\\n",
-        "  --save_checkpoint_path $save_path \\\n"
+        "  --save_checkpoint_path $save_path \n"
       ]
     },
     {
@@ -228,8 +228,8 @@
         "  --run_name $run_name \\\n",
         "  --output_path $output_path \\\n",
         "  --load \\\n",
-        "  -- load_checkpoint_path $load_path \\\n",
-        "  --save_checkpoint_path $save_path \\\n",
+        "  --load_checkpoint_path $load_path \\\n",
+        "  --save_checkpoint_path $save_path \n",
         "else:\n",
         "  !python Wuerstchen/train_stage_B.py \\\n",
         "  --updates $steps \\\n",
@@ -247,7 +247,7 @@
         "  --image_column $image_column \\\n",
         "  --run_name $run_name \\\n",
         "  --output_path $output_path \\\n",
-        "  --save_checkpoint_path $save_path \\\n"
+        "  --save_checkpoint_path $save_path \n"
       ]
     },
     {
