--- a/Train_würstchen.ipynb
+++ b/Train_würstchen.ipynb
@@ -1,12 +1,8 @@
 {
   "cells": [
     {
-      "attachments": {},
       "cell_type": "markdown",
-      "id": "dDnD7npf7ix_",
-      "metadata": {
-        "id": "dDnD7npf7ix_"
-      },
+      "metadata": {},
       "source": [
         "<a target=\"_blank\" href=\"https://colab.research.google.com/github/korakoe/Wuerstchen/blob/main/Train_w%C3%BCrstchen.ipynb\">\n",
         "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
@@ -21,13 +17,13 @@
         "<p align=\"center\" style=\"font-size: 1rem; font-weight: bold; color: #ff593e;\">Join our Discord at: https://discord.gg/5bq9HqVhsJ</p>\n",
         "\n",
         "---\n",
-        "## 🔎 What is this notebook?\n",
+        "## <a id='toc1_1_'></a>[🔎 What is this notebook?](#toc0_)\n",
         "\n",
         "This is a small training notebook for wurstchen, as the official training script requires ddp, and doesnt have argparse, as such ive taken the time to add these to the script, you can find my github [here](https://github.com/korakoe/Wuerstchen)\n",
         "\n",
         "---\n",
         "\n",
-        "#### 📚 In the mean time... check out our other projects\n",
+        "#### <a id='toc1_1_1_1_'></a>[📚 In the mean time... check out our other projects](#toc0_)\n",
         "\n",
         "- **Future Projects**\n",
         "  - Unnamed TTS project\n",
@@ -401,7 +397,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.9.16"
     }
   },
   "nbformat": 4,
