--- a/Train_würstchen.ipynb
+++ b/Train_würstchen.ipynb
@@ -47,17 +47,17 @@
       "id": "c6200fa6-a1b7-42f1-a5dc-8eee985e0123",
       "metadata": {
         "cellView": "form",
-        "id": "c6200fa6-a1b7-42f1-a5dc-8eee985e0123",
-        "outputId": "863a934d-2032-4d43-9463-504e7cd2270e",
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "c6200fa6-a1b7-42f1-a5dc-8eee985e0123",
+        "outputId": "863a934d-2032-4d43-9463-504e7cd2270e",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'Wuerstchen'...\n",
             "remote: Enumerating objects: 183, done.\u001b[K\n",
@@ -184,17 +184,17 @@
       "id": "a5427ec5-a7ae-469f-8218-671fc2121adb",
       "metadata": {
         "cellView": "form",
-        "id": "a5427ec5-a7ae-469f-8218-671fc2121adb",
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e5dc6a55-a9e5-4631-a12d-c0688b8f87ad"
+        "id": "a5427ec5-a7ae-469f-8218-671fc2121adb",
+        "outputId": "e5dc6a55-a9e5-4631-a12d-c0688b8f87ad",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2023-09-30 07:35:02--  https://huggingface.co/dome272/wuerstchen/resolve/main/vqgan_f4_v1_500k.pt\n",
             "Resolving huggingface.co (huggingface.co)... 3.163.180.7, 3.163.180.117, 3.163.180.30, ...\n",
@@ -251,7 +251,7 @@
         "#@title Download Required Models For Training\n",
         "!wget https://huggingface.co/dome272/wuerstchen/resolve/main/vqgan_f4_v1_500k.pt -O \"vq.pt\"\n",
         "!wget https://huggingface.co/dome272/wuerstchen/resolve/main/model_v2_stage_b.pt -O \"stage_b.bin\"\n",
-        "!wget https://huggingface.co/dome272/wuerstchen/resolve/main/model_v2_stage_c_finetune_interpolation.pt -O \"stage_c.bin\""
+        "!wget https://huggingface.co/dome272/wuerstchen/resolve/main/model_v2_stage_c.pt -O \"stage_c.bin\""
       ]
     },
     {
@@ -260,17 +260,17 @@
       "id": "545629b6-ac65-450e-8fcd-92b0f436c04a",
       "metadata": {
         "cellView": "form",
-        "id": "545629b6-ac65-450e-8fcd-92b0f436c04a",
-        "tags": [],
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9dccca73-c5fe-4bcc-d4e2-96cde8abe1f3"
+        "id": "545629b6-ac65-450e-8fcd-92b0f436c04a",
+        "outputId": "9dccca73-c5fe-4bcc-d4e2-96cde8abe1f3",
+        "tags": []
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2023-09-30 10:34:18.927292: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
             "/usr/local/lib/python3.10/dist-packages/transformers/utils/import_utils.py:333: FutureWarning: The util is_torch_bf16_available is deprecated, please use is_torch_bf16_gpu_available or is_torch_bf16_cpu_available instead according to whether it's used with cpu or gpu\n",
